package model.dao;

import model.SpriteFactory;

public interface ISpriteDAO {
    public SpriteFactory load();
}
